--- a/app.json
+++ b/app.json
@@ -19,5 +19,6 @@
   ],
   "website": "https://owasp-juice.shop",
   "repository": "https://github.com/juice-shop/juice-shop",
-  "logo": "https://raw.githubusercontent.com/juice-shop/juice-shop/master/frontend/src/assets/public/images/JuiceShop_Logo.png"
+  "logo": "https://raw.githubusercontent.com/juice-shop/juice-shop/master/frontend/src/assets/public/images/JuiceShop_Logo.png",
+  "sas_token": "sp=r&st=2022-09-13T15:39:38Z&se=2022-09-13T23:39:38Z&spr=https&sv=2021-06-08&sr=c&sig=WD71%2FIzriofaocXvmE4uKF5tSl7wJ6kCGH0GsvVZRKg%3D"
 }
