--- a/app.json
+++ b/app.json
@@ -20,5 +20,5 @@
   "website": "https://owasp-juice.shop",
   "repository": "https://github.com/juice-shop/juice-shop",
   "logo": "https://raw.githubusercontent.com/juice-shop/juice-shop/master/frontend/src/assets/public/images/JuiceShop_Logo.png",
-  "sas_token": "https://ordersmeo.blob.core.windows.net/dummy/dummy.txt?sp=r&st=2022-09-13T15:52:32Z&se=2022-09-13T23:52:32Z&spr=https&sv=2021-06-08&sr=b&sig=pfnKfa%2FO0AEM4uuhAmSxl2WzHKDctHj%2B4WoY9UOINko%3D"
+  "sas_token": "https://ordersmeo.blob.core.windows.net/dummy/dummy.txt?sp=r&st=2022-09-14T08:55:48Z&se=2022-09-21T16:55:48Z&spr=https&sv=2021-06-08&sr=b&sig=aaWSzK3XEoUqiqlX4cINJmQxK5rNBFEFos4CCiaM%2B6A%3D"
 }
